--- a/Road to Recovery/pages/login.html
+++ b/Road to Recovery/pages/login.html
@@ -87,7 +87,7 @@
             //        }
             //    });
             //}
-
+            
     </script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -152,7 +152,7 @@
     <script>
         var isAssistant;
         $(document).ready(function () {
-
+            //changeride();
             // DO NOT REMOVE : GLOBAL FUNCTIONS!
             //debugger;
             if (window.location.href.indexOf('http://40.117.122.242/Road%20to%20Recovery/') != -1) {
@@ -283,6 +283,22 @@
                     error: function (err) {
                         alert("Error in finding is assistant by cellphone: " + err.responseText);
                         isAssistant = false;
+                    }
+                });
+            }
+            function changeride() {
+                $.ajax({
+                    dataType: "json",
+                    url: "WebService.asmx/ChangeRidepatAreas",
+                    contentType: "application/json; charset=utf-8",
+                    type: "POST",
+                    async: false,
+                   // data: JSON.stringify({ uName: userName }),
+                    success: function (data) {
+                        console.log("hey")
+                    },
+                    error: function (err) {
+                        console.log(err.message)
                     }
                 });
             }
