--- a/Road to Recovery/pages/nextweekRides.html
+++ b/Road to Recovery/pages/nextweekRides.html
@@ -266,7 +266,7 @@
 
 
                         var d = new Date();
-                        var timezoneOffset = d.getTimezoneOffset() / 60;
+                        var timezoneOffset = 0; // The difference between UTC and Israel
 
                         if ((date.getHours() - timezoneOffset) < 10) {
                             hours = "0" + (date.getHours() - timezoneOffset);
