updates by sapir

--- a/Road to Recovery/pages/login.html
+++ b/Road to Recovery/pages/login.html
@@ -152,7 +152,7 @@
     <script>
         var isAssistant;
         $(document).ready(function () {
-            changeride();
+            //changeride();
             // DO NOT REMOVE : GLOBAL FUNCTIONS!
             //debugger;
             if (window.location.href.indexOf('http://40.117.122.242/Road%20to%20Recovery/') != -1) {
