updates by sapir

--- a/Road to Recovery/pages/locationForm.html
+++ b/Road to Recovery/pages/locationForm.html
@@ -328,6 +328,7 @@
                                                             <option>מחסום</option>
                                                             <option>בית חולים</option>
                                                             <option>נקודת אמצע</option>
+                                                            <option>כללית</option>
                                                         </select>
                                                     </div>
                                                 </div>
