--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -1442,7 +1442,7 @@
                         $("#dateRide").attr('disabled', 'disabled');
                         $("#dirBTN").attr('disabled', 'disabled');
                     }
-                    if (ridePat.Pat.IsAnonymous == "True" && (ridePat.Pat.DisplayName.indexOf('מרכז') !== -1 || ridePat.Pat.DisplayName.indexOf('ארז') !== -1 ||ridePat.Pat.DisplayName.indexOf('ירושלים') !== -1 || ridePat.Pat.DisplayName.indexOf('דרום') !== -1 ||  ridePat.Pat.DisplayName.indexOf('צפון') !== -1)) {
+                    if (ridePat.Pat.IsAnonymous == "True" && (ridePat.Pat.DisplayName.indexOf('מרכז') !== -1 || ridePat.Pat.DisplayName.indexOf('ארז') !== -1 || ridePat.Pat.DisplayName.indexOf('ירושלים') !== -1 || ridePat.Pat.DisplayName.indexOf('דרום') !== -1 || ridePat.Pat.DisplayName.indexOf('צפון') !== -1 || ridePat.Pat.DisplayName.indexOf('תרקומיא') !== -1)) {
                         var area = "";
                         if(ridePat.Pat.DisplayName.indexOf('מרכז') !== -1){
                             area="מרכז";
@@ -1455,6 +1455,12 @@
                         }
                         if(ridePat.Pat.DisplayName.indexOf('צפון') !== -1){
                             area="צפון";
+                        }
+                        if (ridePat.Pat.DisplayName.indexOf('ארז') !== -1) {
+                            area = "ארז";
+                        }
+                        if (ridePat.Pat.DisplayName.indexOf('תרקומיא') !== -1) {
+                            area = "תרקומיא";
                         }
                         var origin = ridePat.Origin.Name;
                         var destination = ridePat.Destination.Name;
